<resources>
    <string name="app_name">NovaThor Settings</string>
    <string name="image">Thumbnail</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_value">Invalid value entered! Please re-enter a value</string>
    <string name="about_title">TeamCanjica\nNovaThor Settings</string>
    <string name="about_developers_title">Developers</string>
    <string name="about_developers_summary" translatable="false">Rox\nzwliew\nfrapeti\nt4n017</string>
    <string name="about_translators_title">Translators</string>
    <string name="about_translators_summary">Crowdin Translators</string>
    <string name="about_version_title">Version Number</string>
    <string name="about_version_summary" translatable="false">1.4</string>
    <string name="about_copyright1" translatable="false">Copyright © 2014 TeamCanjica</string>
    <string name="about_copyright2" translatable="false">2013 Cyanogenmod</string>
    <string name="settings_name">Settings</string>
    <string name="reboot_subcat_title">Reboot</string>
    <string name="disable_restore_title_head">Disable Restore on Reboot</string>
    <string name="disable_restore_summary_head">Disable restoring of settings on reboot. Useful if you aren\'t sure whether the settings are stable.</string>
    <string name="theme_subcat_title">Themes</string>
    <string name="switch_theme_summary_head">Switch your App Theme. Choose between three different themes, suggestions accepted!</string>
    <string name="switch_theme_title_head">Switch App Theme</string>
    <string name="network_name">Network</string>
    <string name="radio_subcat_title">Radio mode</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>
    <string name="tcp_subcat_title">TCP</string>
    <string name="tcp_title_head">TCP Algorithm</string>
    <string name="tcp_summary_head">Switching the algorithm affects your download and upload speeds and latency.</string>
    <string name="wifi_subcat_title">Wi-Fi</string>
    <string name="use_wifipm_max_title_head">Use Wi-Fi PM_MAX mode</string>
    <string name="use_wifipm_max_summary_head">Using PM_MAX saves power, but internet speed is reduced.</string>
    <string name="power_name">Power</string>
    <string name="otg_subcat_title">USB OTG Settings</string>
    <string name="otg_power_title_head">USB-VBUS Power</string>
    <string name="otg_power_summary_head">Enables output voltage to the USB port</string>
    <string name="cc_subcat_title">Charger control</string>
    <string name="use_cc_title_head">Use Charger Control</string>
    <string name="use_cc_summary_head">Enables Charger Control</string>
    <string name="cc_title_head">Charger currency</string>
    <string name="cc_summary_head">Charger currency in mA, low levels protect battery but takes longer to charge, high levels may damage battery life</string>
    <string name="ccc_subcat_title">Cycle Charging</string>
    <string name="use_ccc_title_head">Control Cycle Charging</string>
    <string name="use_ccc_summary_head">Enables Cycle Charging Control</string>
    <string name="dt_title_head">Discharging threshold</string>
    <string name="dt_summary_head">After this level is reached phone will start discharging.</string>
    <string name="dt_dialog_message">Select end battery level of charging</string>
    <string name="rt_title_head">Recharging threshold</string>
    <string name="rt_summary_head">After this level is reached phone will start charging again. <b>Note: Recharging threshold must be lower than discharging threshold!</b> </string>
    <string name="rt_dialog_message">Select recharging battery level</string>
    <string name="eoc_subcat_title">Charge status</string>
    <string name="eoc_title_head">End of charge</string>
    <string name="eoc_summary_head">Check real charge status</string>
    <string name="eoc_dialog_message">EOC Status: </string>
    <string name="deepsleep_subcat_title">Deep Sleep</string>
    <string name="deepest_sleep_title_head">Deepest sleep state</string>
    <string name="deepest_sleep_summary_head">Specify the highest deep sleep level</string>
    <string name="refresh_bs_subcat_title">Battery stats</string>
    <string name="refresh_bs_title_head">Refresh battery stats</string>
    <string name="refresh_bs_dialog_message">Battery stats successfully refreshed!</string>
    <string name="audio_name">Audio</string>
    <string name="headsetgain_subcat_title">Headset Gain</string>
    <string name="gain_control_summary_head">Adjust the amount of gain, the lower the value, the greater the gain.</string>
    <string name="gain1_control_summary_head">Adjust the amount of gain, the greater the value, the greater the gain.</string>
    <string name="enable_anagain3_title_head">AnaGain3</string>
    <string name="enable_anagain3_summary_head">Enable headset analog gain path.</string>
    <string name="anagain3_control_title_head">AnaGain3 Gain Control</string>
    <string name="anagain3_control_dialog_message">Select the amount of volume gain for AnaGain3. Default:0</string>
    <string name="enable_hsldiggain_title_head">HsLDigGain</string>
    <string name="enable_hsldiggain_summary_head">Enable headset left digital path gain.</string>
    <string name="hsldiggain_control_title_head">HsLDigGain Gain Control</string>
    <string name="hsldiggain_control_dialog_message">Select the amount of volume gain for HsLDigGain. Default:4</string>
    <string name="enable_hsrdiggain_title_head">HsRDigGain</string>
    <string name="enable_hsrdiggain_summary_head">Enable headset right digital path gain.</string>
    <string name="hsrdiggain_control_title_head">HsRDigGain Gain Control</string>
    <string name="hsrdiggain_control_dialog_message">Select the amount of volume gain for HsRDigGain. Default:4</string>
    <string name="miscgain_subcat_title">Misc Gain</string>
    <string name="enable_addiggain2_title_head">ADDigGain2</string>
    <string name="enable_addiggain2_summary_head">Enable phone microphone digital path gain.</string>
    <string name="addiggain2_control_title_head">ADDigGain2 Gain Control</string>
    <string name="addiggain2_control_dialog_message">Select the amount of volume gain for ADDigGain2. Default:25</string>
    <string name="enable_eardiggain_title_head">EarDigGain</string>
    <string name="enable_eardiggain_summary_head">Enable earpiece digital path gain.</string>
    <string name="eardiggain_control_title_head">EarDigGain Gain Control</string>
    <string name="eardiggain_control_dialog_message">Select the amount of volume gain for EarDigGain. Default:4</string>
    <string name="enable_classdhpg_title_head">ClassDHPG</string>
    <string name="enable_classdhpg_summary_head">Enable ClassD amplifier high-pass gain.</string>
    <string name="classdhpg_control_title_head">ClassDHPG Gain Control</string>
    <string name="classdhpg_control_dialog_message">Select the amount of volume gain for ClassDHPG. Default:10</string>
    <string name="powermodes_subcat_title">Power Modes</string>
    <string name="enable_lpa_mode_title_head">LPA Mode</string>
    <string name="enable_lpa_mode_summary_head">Enables Lower-power Audio mode.</string>
    <string name="lpa_mode_control_title_head">LPA Mode Control</string>
    <string name="lpa_mode_control_summary_head">Adjust the vape voltage used in LPA mode.</string>
    <string name="lpa_mode_control_dialog_message">Adjust the vape voltage. Default:22</string>
    <string name="use_chargepump_title_head">Headset Charge Pump</string>
    <string name="use_chargepump_summary_head">Enable charge pump to use dynamic voltage supply, lower power cost.\nLeave disabled if you want to use fixed 1.8V supply.</string>
    <string name="enable_hslowpow_title_head">Enable HsLowPow</string>
    <string name="enable_hslowpow_summary_head">Enable the Hs low powered mode to use less power but have lower quality audio.</string>
    <string name="enable_hsdaclowpow_title_head">Enable HsDacLowPow</string>
    <string name="enable_hsdaclowpow_summary_head">Enable the HsDac low powered mode to use less power but have lower quality audio.</string>
    <string name="miscellaneous_subcat_title">Miscellaneous</string>
    <string name="enable_hshpen_title_head">Enable HsHpEn</string>
    <string name="enable_hshpen_summary_head">Enable the HsHpEn high pass filter to reduce sub-noise.</string>
    <string name="enable_classdwg_title_head">ClassDDithWGain</string>
    <string name="enable_classdwg_summary_head">Enable control for the white component of dithering filter.</string>
    <string name="classdwg_control_title_head">ClassDDithWGain Gain Control</string>
    <string name="classdwg_control_dialog_message">Select the amount of volume gain for ClassDDithWGain. Default:10</string>
    <string name="screen_name">Screen</string>
    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="use_2tap2wake_title_head">2Tap2Wake</string>
    <string name="use_2tap2wake_summary_head">Wake device with double tap on screen.</string>
    <string name="dt2w_timeout_title_head">2Tap2Wake Timeout</string>
    <string name="dt2w_timeout_summary_head">Set maximum delay between 2 taps to unlock device in ms</string>
    <string name="use_sweep2wake_title_head">Sweep2Wake</string>
    <string name="use_sweep2wake_summary_head">Unlock device with a swipe.\nSet x and y axis threshold to 0 for enabling Touch2Wake.</string>
    <string name="x_sweep2wake_title_head">S2W Threshold X</string>
    <string name="x_sweep2wake_summary_head">Tweak the x-axis threshold value of swiping. Default:120</string>
    <string name="y_sweep2wake_title_head">S2W Threshold Y</string>
    <string name="y_sweep2wake_summary_head">Tweak the y-axis threshold value of swiping. Default:240</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    <string name="screen_visual_subcat_title">Visual</string>
    <string name="panel_gamma_title_head">Screen Gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>
    <string name="min_brightness_title_head">Minimum Brightness</string>
    <string name="min_brightness_summary_head">Adjust the minimum brightness of the brightness slider.</string>
    <string name="min_brightness_dialog_message">Adjust the minimum brightness.</string>
    <string name="fsync_subcat_title">FSync</string>
    <string name="fsync_title_head">FSync Mode</string>
    <string name="fsync_summary_head">Disabling fsync can improve IO performance, but it may cause data corruption. Dynamic fsync will sync all buffers when screen turns off.</string>
    <string name="emulator_subcat_title">Emulator</string>
    <string name="screenoff_title_head">Turn Screen Off</string>
    <string name="screenoff_summary_head">Turn your screen off using an emulated button press.</string>
    <string name="powermenu_title_head">Activate Power Menu</string>
    <string name="powermenu_summary_head">Activate the power menu using an emulated button press.</string>
    <string name="gpu_name">GPU</string>
    <string name="clock_speed_subcat_title">Clock Speed</string>
    <string name="disable_autoboost_title_head">Disable AutoBoost GPU</string>
    <string name="disable_autoboost_summary_head">Disabling autoboosting GPU governor will allow you to manually set static GPU clock speeds.</string>
    <string name="set_gpu_clock_title_head">Clock Speed</string>
    <string name="set_gpu_clock_summary_head">Set static GPU clock speed. Default:400MHz</string>
    <string name="disable_fullspeed_title_head">Disable GPU fullspeed</string>
    <string name="disable_fullspeed_summary_head">By default, GPU clock is working at fullspeed. Change it to halfspeed (399 kHz / 2 = 199 kHz, etc.)</string>
</resources>